--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server/app.js",
   "scripts": {
     "debug": "cross-env NODE_ENV=dev babel-node src/server/app.js --nolazy --inspect-brk=9229",
-    "babel-node": "node_modules/.bin/babel-node",
+    "babel-node": "babel-node",
     "lint": "eslint . --ext .js",
     "test": "mocha --recursive --timeout 100000 test/ --require babel-register --reporter spec || exit 0",
     "jest": "jest ./src/shared/components/ --watchAll",
@@ -43,13 +43,6 @@
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
     "date-fns": "^1.30.1",
-    "dd-azure-token": "5.2.1",
-    "dd-components-react": "^0.3.29",
-    "dd-content-loader": "4.0.1",
-    "dd-flexible-config": "3.0.2",
-    "dd-logger": "4.0.2",
-    "dd-redisCache": "3.0.1",
-    "dd-trace": "^5.23.1",
     "es6-promise": "^4.2.4",
     "eslint-plugin-react": "^7.11.1",
     "express": "^4.14.0",
@@ -90,15 +83,15 @@
     "redux-thunk": "^2.2.0",
     "request": "^2.88.0",
     "saas": "^1.0.0",
-    "sass-embedded": "^1.85.1",
+    "sass": "^1.32.0",
     "serialize-javascript": "^1.5.0",
     "string-format": "^0.5.0",
     "swagger-ui-express": "^4.0.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^5.97.1",
-    "webpack-dev-middleware": "^7.4.2",
+    "webpack-dev-middleware": "^3.7.3",
     "webpack-hot-middleware": "^2.26.1",
-    "webpack-merge": "^6.0.1",
+    "webpack-merge": "^4.2.2",
     "winston-daily-rotate-file": "^1.3.0"
   },
   "devDependencies": {
@@ -129,7 +122,7 @@
     "react-test-renderer": "^16.3.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-mock-store": "^1.5.3",
-    "sass-loader": "^16.0.5",
+    "sass-loader": "^10.1.1",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.14.0",
     "style-loader": "^0.20.3",
@@ -152,7 +145,7 @@
   "author": "Rajeev",
   "license": "ISC",
   "engines": {
-    "npm": ">=10.9.2",
-    "node": ">=22.14.0"
+    "npm": ">=6.0.0",
+    "node": ">=14.0.0"
   }
 }
